# my_ai_project

./: .coverage.runnervmg1sw1.3500.XqJARyRx  .coverage.runnervmg1sw1.3658.XjOLLnZx  .coverage.runnervmg1sw1.3684.XtGaQbcx  .coverage.runnervmg1sw1.3687.XicmRtpx  .dockerignore  .editorconfig  .env.docker  .env.example  .env.security.example  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .julesrc  .magic_urls  .mutmut_config.py  .pre-commit-config.yaml  .replit  .semgrep.yml  .semgrepignore  .trivy.yml  .yamllint  100_percent_dead_code_report.txt  ACCESS_SUPERHUMAN_GUIDE.md  ACTIONABLE_CLEANUP_LIST.md  ACTION_REQUIRED_VISUAL_GUIDE.md  ACTUAL_IMPLEMENTATION_REPORT_AR.md  ADMIN_CHAT_ERROR_HANDLING_FIX.md  ADMIN_CHAT_FIX_COMPLEX_QUESTIONS.md  ADMIN_CHAT_FIX_GUIDE_AR.md  ADMIN_CHAT_FIX_VISUAL_SUMMARY.md  ADMIN_CHAT_IMPROVEMENTS_VISUALIZATION.md  ADMIN_CHAT_PERSISTENCE_FIX_README.md  ADMIN_CHAT_SOLUTION_AR.md  ADVANCED_TESTING_IMPLEMENTATION_REPORT.md  AGENTS.md  AI_ADAPTIVE_MICROSERVICES_REFACTORING_REPORT.md  AI_AGENT_TOKEN_ARCHITECTURE.md  AI_AGENT_TOKEN_IMPLEMENTATION.md  (+900 more)
.cicd/: gate_checks.yaml
.cogni/: embeddings.npy  index.jsonl  meta.json
.cursor/: mcp.json
.devcontainer/: ARCHITECTURE.md  CHANGELOG.md  README.md  STARTUP_GUIDE.md  devcontainer.json  diagnostics.sh  docker-compose.host.yml  healthcheck.sh  on-attach-old.sh  on-attach.sh  on-create.sh  on-start.sh  supervisor.sh  utils.sh
.github/: BRANCH_PROTECTION_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  VERIFICATION_CHECKLIST.md  copilot-instructions.md  dependabot.yml
ai_service/: Dockerfile  entrypoint.sh  main.py  requirements.txt
ai_service_standalone/: Dockerfile  main.py  requirements.txt
api_contracts/: README.md
app/: __init__.py  api_docs.py  api_versioning.py  cli.py  config.py  dependencies.py  dev_frame_middleware.py  extensions.py  forms.py  kernel.py  main.py  models.py  routes.py  settings.py  swagger_integration.py
application/: CORE_PROPOSAL_500_WORDS.md  ETHICS_AND_DATA_150_WORDS.md  PROJECT_SUMMARY_30_WORDS.txt  SHORT_ANSWERS_150_WORDS.md
attached_assets/: Pasted--my-ai-project-Chat-Code-Skip-to-content-Navig-1763994629834_1763994629837.txt
briefs/: POLICY_BRIEF_TEMPLATE.md
compat/: __init__.py  current_app.py
cryptography/: __init__.py  fernet.py
docs/: ADR-003-PREVENTING-SERVICE-METHOD-CATASTROPHES.md  API_FIRST_ARCHITECTURE.md  API_FIRST_PROOF.md  API_FIRST_SUMMARY.md  API_FIRST_TESTING_GUIDE.md  ARCHITECTURAL_EVOLUTION.md  ARCHITECTURE.md  ARCH_MICROSERVICES_CONSTITUTION.md  ARCH_SPLIT_BRAIN_REPORT.md  ASYNC_GENERATOR_FIX.md  ASYNC_GENERATOR_LOGIN_FIX.md  BOUNDARIES_ARCHITECTURE_GUIDE.md  CS51_ABSTRACTION_DESIGN.md  CS51_IMPLEMENTATION_SUMMARY.md  CS61_APPLICATION_GUIDE.md  CS61_SYSTEMS_PROGRAMMING.md  CS73_IMPLEMENTATION_COMPLETE.md  CS73_IMPLEMENTATION_GUIDE.md  DELIVERABLES_ROADMAP.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  ENUM_CASE_SENSITIVITY_FIX.md  EVALUATION_PROTOCOL.md  FOR_ABSOLUTE_BEGINNERS.md  FOUNDER_IDENTITY_FIX.md  FOUNDER_IDENTITY_FIX_QUICK.md  GRANT_ALIGNMENT.md  IMPACT_MEASUREMENT_PLAN.md  INDEX.md  MICROSERVICES_DEPLOYMENT_GUIDE.md  MICROSERVICES_PLATFORM.md  OVERMIND_ARCHITECTURE.md  OVERMIND_SUPER_CAPABILITIES_AR.md  PHASE1_COMPLETION_SUMMARY.md  PHASE3_WAVE1_COMPLETE.md  PHASE3_WAVE1_MODEL_SERVING_REFACTORING.md  PHASE3_WAVE1_SELECTION.md  PHASE3_WAVE3_SELECTION.md  PHASE_18_FINAL_SUMMARY.md  (+41 more)
examples/: README.md  cs73_complete_example.py  cs73_demo.py  poC_usage.md  takbak_example.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  verify_admin_mission_selector.py  verify_mission_selector.py
infra/: schema-registry-docker-compose.yml
infrastructure/: workload_identity.tf
knowledge_base/: BAC_2024_Math_Subject1.md  BAC_2024_Math_Subject2.md  README.md  bac2024_math_experimental_subject1_ex1_ex2.md
logs/: jules_audit.jsonl  ruff_before.txt
microservices/: README.md  __init__.py
migration/: ROLLBACK.md  STEP1_PLAYBOOK.md  STEP1_migration_map.md
migrations/: env.py
monitoring/: slo.yaml
passlib/: __init__.py  context.py
pipelines/: argo-train.yaml  data_quality_checkpoint.py
redis/: __init__.py  asyncio.py
reports/: 00_git_status.txt  api_routes.json  docker_config.txt  final_architecture_report.md  flask_compose_refs.txt  flask_docs_refs.txt  flask_grep_raw.txt  flask_references.json  flask_references_classified.json  migration_report.md  model_rebuild_summary.txt  pipdeptree.json  rollback_instructions.md  root_cause_analysis.md  ruff_preflight.txt  safety_audit_v2.md  step4_reality_kernel_alignment.md  step5_final_alignment.md  step6_ci_upgrade_summary.txt  step6_deprecation_audit.md  step7_dependency_layer_rebuild_summary.txt  step7_smoke_root_cause.md  step_branch.txt  step_migration_root_cause.md  step_reinstall_env.txt  step_test_collect_count.txt  step_test_discovery_root_cause.md  step_test_repair_summary.txt  summary.txt  superhuman_report.md  top-codes.txt  top-files.txt
research/: README.md
scripts/: README.md  __init__.py  achieve_100_coverage.py  aggressive_fix.py  analyze_violations.py  apply_solid_dry_kiss.py  audit_logger.py  auto_fix_quality.sh  backfill_messages.py  bootstrap_db.py  capture_proof.py  check_action_health.py  check_critical_assets.py  check_formatting.sh  check_secrets_status.py  ci_guardrails.py  cleanup_large_artifacts.sh  cleanup_services.sh  codespace_guardian.sh  codespaces_diagnostic.sh  cs61_simplify.py  debug_connection.py  debug_intent.py  debug_routes.py  diagnose_db.py  diagnose_gitlab_sync.py  ensure_admin.py  ensure_admin_sop.py  find_dead_code.py  fix_auth_env.py  fix_duplicate_prepared_statement.py  fix_linked_mission_id_check.py  force_start_codespaces.sh  format_all.sh  format_code.sh  generate_all_tests.py  generate_docs.py  heal_db_enum_case.py  heal_env.py  ingest_content.py  (+89 more)
sentence_transformers/: __init__.py
serving/: kserve-inference.yaml
templates/: base.html  dashboard.html  exercise.html  home.html  lesson_detail.html  lessons_list.html  login.html  register.html  subjects.html  (+1 more)
(+2884 files in other folders)
